--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "json-server": "^0.16.3",
+    "ra-data-simple-rest": "^3.18.3",
     "react": "^17.0.2",
+    "react-admin": "^3.18.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
@@ -23,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 5000",
+    "server": "json-server --watch db.json --port 5000 --middlewares ./range.js",
     "client": "npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
